--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter: ^0.3.22+1
+#  webview_flutter: ^0.3.22+1
   flutter_webview_plugin: ^0.3.11
+  stacked: ^1.3.4
+  stacked_services: ^0.5.4+3
+  flutter_svg: ^0.19.0
+  get_it: ^5.0.0
+  google_fonts: ^1.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
